Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-20735

File System "rename" in Explorer's treeview shall not allow forbidden chars

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.17
    • Shell
    • None

    Description

      reactos-bootcd-0.4.17-dev-643-ged7adce-x86-gcc-lin-dbg

      • Edit a folder name from Explorer and attempt to use "/\:*?"<>|" => No effect
      • Edit a folder name from Explorer Folder Panel (tree view) and attempt to use "/\:*?"<>|" => accepted and leading (hopefully) to an error
      • Same happens for "empty" or "only spaces", and only error message then differs
      • Expected behavior: forbidden chars shall have no effect when used in treeview's edit mode, like in listview's edit mode

      Attachments

        Issue Links

          Activity

            People

              whindsaks whindsaks
              KRosUser KRosUser
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: