[SHDOCVW] SHLimitInputEdit in Explorer tree rename edit

CORE-20735